feat(users): Improve user management and refactor code.
Removed the user_id column from the table; its role is now handled by name.

Added unique validation: prevents creating two users with the same name.

Added more checks and improved user content handling.

Small refactoring to unify code style.

Fixed existing bugs.

--- a/configs/app.json
+++ b/configs/app.json
@@ -1,3 +1,5 @@
 {
-    "time_zone": "Asia/Bishkek"
+    "time_zone": "Asia/Bishkek",
+    "min_passenger_count": 0,
+    "max_passenger_count": 200
 }
